@@ -154,6 +154,7 @@ The following bugs are resolved with this release:
   [25203] libio: Disable vtable validation for pre-2.1 interposed handles
   [25204] Ignore LD_PREFER_MAP_32BIT_EXEC for SUID programs
   [25232] No const correctness for strchr et al. for Clang++
+  [25423] Array overflow in backtrace on powerpc
 
 
 Version 2.27
